--- a/CountdownPage/index.html
+++ b/CountdownPage/index.html
@@ -43,11 +43,11 @@
     <div id="toast" class="toast">ข้อความแจ้งเตือน</div>
 
     <audio id="tickSound" loop>
-        <source src="\Asset\Music\tick.mp3" type="audio/mpeg">
+        <source src="../Asset/Music/tick.mp3" type="audio/mpeg">
     </audio>
 
     <audio id="alarmSound">
-        <source src="\Asset\Music\alarm.mp3" type="audio/mpeg">
+        <source src="../Asset/Music/alarm.mp3" type="audio/mpeg">
     </audio>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
